# Samples

./: .gitignore  CMakeLists.txt  test_type.cpp
cpprest/: CMakeLists.txt  bing_search.cpp  oauth1_client.cpp
stl/: CMakeLists.txt  stl_allocator.h  stl_vector.h
stl/details/: split_buffer.h
stl/temp/: CMakeLists.txt  allocator_test.cpp  vector_test.cpp
